added screenshot . set signing

--- a/Base64XcodeExtension.xcodeproj/xcshareddata/xcschemes/Base64XcodeExtension.xcscheme
+++ b/Base64XcodeExtension.xcodeproj/xcshareddata/xcschemes/Base64XcodeExtension.xcscheme
@@ -57,12 +57,8 @@
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES"
       launchAutomaticallySubstyle = "2">
-      <RemoteRunnable
-         runnableDebuggingMode = "0"
-         BundleIdentifier = "com.apple.dt.Xcode"
-         RemotePath = "/Applications/Xcode 11.2.1.app">
-      </RemoteRunnable>
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "F5C72574222D511500116B5F"
@@ -70,7 +66,7 @@
             BlueprintName = "ExtensionInstallerApp"
             ReferencedContainer = "container:Base64XcodeExtension.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
